; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_physbusif.c_physbusif_shutdown.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_physbusif.c_physbusif_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@__usbdev = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@__usb_closeCB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @physbusif_shutdown() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 0), align 4
  %2 = icmp ne i32 %1, 4
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %7

4:                                                ; preds = %0
  %5 = load i32, i32* @__usb_closeCB, align 4
  %6 = call i32 @USB_CloseDeviceAsync(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @__usbdev, i32 0, i32 1), i32 %5, i32* null)
  br label %7

7:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @USB_CloseDeviceAsync(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
